force-app/main/default/objects/Survey_Request__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wall Builder</fullName>
            </value>
            <value>
                <fullName>Intapp Time</fullName>
            </value>
            <value>
                <fullName>Time Builder</fullName>
            </value>
            <value>
                <fullName>DTE</fullName>
            </value>
            <value>
                <fullName>RollCall</fullName>
            </value>
            <value>
                <fullName>Integration Builder</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>