force-app/main/default/objects/Survey_Request__c/fields/Project_Contact__c.field-meta.xml
<CustomField>
    <fullName>Project_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Requests (Project Contact)</relationshipLabel>
    <relationshipName>Survey_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>