force-app/main/default/objects/Survey_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Ready to send</fullName>
            </value>
            <value>
                <fullName>Survey sent</fullName>
            </value>
            <value>
                <fullName>Survey received</fullName>
            </value>
            <value>
                <fullName>Do not survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>