force-app/main/default/objects/Survey_Request__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Customer</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Survey Requests</relationshipLabel>
    <relationshipName>Survey_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>