force-app/main/default/objects/Survey_Request__c/fields/Subscription_Contact__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Customer Contact</label>
    <referenceTo>Subscription_Contact__c</referenceTo>
    <relationshipLabel>Survey Requests</relationshipLabel>
    <relationshipName>Survey_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>