force-app/main/default/objects/Survey_Request__c/fields/SurveyURL__c.field-meta.xml
<CustomField>
    <fullName>SurveyURL__c</fullName>
    <description>URL of survey sent to customer</description>
    <label>SurveyURL</label>
    <length>450</length>
    <type>LongTextArea</type>
</CustomField>